Pull latest ficus (#286)
* removing the coloum allowed_users

* Adding new line end of file

* Runs apt-get update for apt install, fixes tests (#198)

* Update docker-run-tests.sh

* Updating from deprecated travis vms

* Fixing jasmine version

* Increase build timeout for travis docker pull

* disable PII data being logged (#192)

* disable PII data being logged

* keep current test settings

* keep the pii setting same for tests

* Remove pii (#202)

* disable PII data being logged

* remove PII

* remove PII - 2

* remove PII - 3

* remove PII - 4

* remove PII fix

* fix quality

* fix quality

* add pii removal test

* breadcrumb & title fix

* breadcrumb & title fix

* Fix for test cases

* [#103970] Bugfix for 404 error (#203)

* bugfix 404 final fixes

* Update views.py

pylint changes

* HTTPOnly for user cookies. (#196)

* Remove pii (#202) (#206)

* Remove pii from logs (#202) (#206)

* Client credentials + grades api (#228)

* Client credentials and grades api

* Updating the permissions on the fly for request object (#233)

* Updating the permissions on the fly for request object

* Update views.py

* msa and gdpr change into mainline (#216)

* Adds support for objuscating last two octets of ip address in tracking logs

* Cleaning up change

* Fixing a couple edge case events

* MSA Live Authentication with RPS integration

* MSA Live Authentication with RPS integration

* MSA Live Authentication with RPS integration

* Some indentation issues fixed

* Some indentation issues fixed

* Fixed the build errors

* Fixed the build errors

* Fixed the build errors

* Fixing build errors

* Fixing build errors

* Build errors test failures

* Fixing build errors

* Fixing build errors

* Fixing build errors

* Fixing build errors

* added migration file for migration test failures

* Fixing build errors

* Fixing build errors

* Fixing build er

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,9 +23,12 @@ branches:
   - master
   - oxa/master.fic
   - oxa/release.fic
+  - oxa/dev.fic_msa
   - oxa/dev.fic
+  - oxa/ms.fic
   - oxa/ci
   - mani_t2
+
 
 before_install:
   # Login and fetch container from Azure container registry
